--- a/site-institucional/Login e Cadastro/css/login.css
+++ b/site-institucional/Login e Cadastro/css/login.css
@@ -1,7 +1,7 @@
 body{
     margin:0;
     background:gray;
-    background-image: url("https://i.pinimg.com/originals/4a/94/26/4a94268541d7a0ed95a8be5138e8a288.jpg");
+    background-image: url("https://i.pinimg.com/originals/c8/34/42/c83442c190516ecbef5ac8b99e8b6cdf.jpg");
     background-size: cover;
     font-family: 'Courier New', Courier, monospace;
 }
@@ -9,7 +9,7 @@ body{
 .login{
    width: 300px;
    height: 400px;
-   border: 2px solid black;
+   border: 2px solid white;
    border-radius: 80px 0px 80px 0px;
    color: white;
    top: 50%;
@@ -68,20 +68,13 @@ h1{
     background: black;
     border-radius: 20px;
     transition: 0.2s;
-}
-
-.login input[type="submite"]:hover{
-    cursor: pointer;
-    background: #ff4d4d;
-    transition: 0.2s;
-}
-
+} 
 .login a {
     font-weight: bold;
     text-decoration: none;
     font-size: 12px;
     line-height: 20px;
-    color: #4b4b4b;
+    color: white;
     transition: 0.2s;
 }
 
