--- a/site-institucional/pagina-inicial/main.css
+++ b/site-institucional/pagina-inicial/main.css
@@ -1,7 +1,7 @@
 .banner{
     border-bottom: red;
     height: 530px;
-    background: #adadad url(../imagens/pexels-pixabay-326461.jpg) no-repeat fixed;
+    background: #adadad url(../imagens/pexels-pixabay-158826.jpg) no-repeat fixed;
     background-size: cover;
 }
 
@@ -16,5 +16,5 @@
 }
 
 .bannerBox h1 span{
-    color: yellow;
+    color: rgb(231, 228, 34);
 }
