--- a/site-institucional/pagina-inicial/CSS/main.css
+++ b/site-institucional/pagina-inicial/CSS/main.css
@@ -2,6 +2,7 @@
     border-bottom: red;
     height: 530px;
     background: #adadad url(../imagens/pexels-pixabay-158826.jpg) no-repeat fixed;
+    background-blend-mode: darken;
     background-size: cover;
 }
 
