--- a/site-institucional/pagina-inicial/CSS/negocio.css
+++ b/site-institucional/pagina-inicial/CSS/negocio.css
@@ -1,13 +1,13 @@
 .negocio{
     height: 400px;
-    background-color: rgb(107, 34, 12);
+    background-color: rgb(247, 229, 224);
     background-size: cover;
 
 }
 
 .titulo {
     text-align: center;
-    color: yellow;
+    color: rgb(197, 36, 36);
     padding: 2rem;
 }
 
@@ -41,5 +41,8 @@
     width: 100%;
 }
 
-
+.negocioBox h5{
+    text-align: center;
+    padding: 10px;
+}
 
