--- a/site-institucional/pagina-inicial/CSS/style.css
+++ b/site-institucional/pagina-inicial/CSS/style.css
@@ -21,6 +21,7 @@ body{
 
 .container2{
     width: 80%;
+    margin: auto;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -71,4 +72,33 @@ main{
     color: red;
     transition: .10s;
 }
+
+.footer{
+    background-color: black;
+    color: white;
+    padding: 20px;
+    justify-content: space-around;
+    grid-area: footer;
+    
+
+    
+}
+
+.footer .container2 img{
+    width: 50px;
+}
+
+.footer .container2 .logo{
+    align-self: center;
+
+}
+
+.footer .container2{
+    display: flex;
+    justify-content: space-between;
+}
+
+
+
+
 
