Adcionei um novo estilo a navbar e um modelo de documento sobre nós para analisarem

--- a/site-institucional/pagina-inicial/CSS/style.css
+++ b/site-institucional/pagina-inicial/CSS/style.css
@@ -39,7 +39,7 @@ body{
 .navbar {
     grid-area: navbar;
     width: 100%;
-    background-color: black;
+    background-image: linear-gradient(to bottom right, black , red);
     display: flex;
     justify-content: space-around;
 }
@@ -74,7 +74,7 @@ main{
 }
 
 .footer{
-    background-color: black;
+    background-image: linear-gradient(to bottom right, black , red);
     color: white;
     padding: 20px;
     justify-content: space-around;
