--- a/site-institucional/pagina-inicial/CSS/negocio.css
+++ b/site-institucional/pagina-inicial/CSS/negocio.css
@@ -1,14 +1,18 @@
 .negocio{
-    height: 400px;
-    background-color: rgb(247, 229, 224);
+    height: 574px;
+    background-color: rgb(0, 0, 0);
     background-size: cover;
+    padding: 20px 3px 7px 5px;
+}
     
 
 }
 
 .titulo {
     text-align: center;
-    color: rgb(197, 36, 36);
+    background-color: rgb(158, 19, 19);
+    border-radius: 50px;
+    color: rgb(247, 241, 241);
     padding: 2rem;
 }
 
@@ -44,6 +48,12 @@
 
 .negocioBox h5{
     text-align: center;
+    color: yellow;
     padding: 10px;
+}
+ 
+.negocioBox p{
+    text-align: center ;
+    color: white;
 }
 
