--- a/site-institucional/pagina-inicial/CSS/negocio.css
+++ b/site-institucional/pagina-inicial/CSS/negocio.css
@@ -8,11 +8,10 @@
 
 }
 
-.titulo {
+.negocio h2 {
     text-align: center;
-    background-color: rgb(158, 19, 19);
     border-radius: 50px;
-    color: rgb(247, 241, 241);
+    color: rgb(255, 153, 19);
     padding: 2rem;
 }
 
