--- a/site-institucional/pagina-inicial/CSS/main.css
+++ b/site-institucional/pagina-inicial/CSS/main.css
@@ -1,7 +1,8 @@
 .banner{
     border-bottom: red;
     height: 610px;
-    background: #adadad url(../imagens/pexels-pixabay-158826.jpg) no-repeat fixed;
+    background-image: linear-gradient(to top, rgb(252, 249, 249) , rgb(255, 153, 19));
+    /*background: #adadad url(../imagens/pexels-pixabay-158826.jpg) no-repeat fixed;*/
     background-blend-mode: darken;
     background-size: cover;
 }
@@ -10,6 +11,10 @@
     padding: 70px 150px 150px 150px;
     color: rgb(245, 236, 236);
     width: 80%;
+}
+
+.bannerBox span{
+    color: black;
 }
 
 .bannerBox h1{
