--- a/site-institucional/pagina-inicial/CSS/style.css
+++ b/site-institucional/pagina-inicial/CSS/style.css
@@ -79,9 +79,7 @@ main{
     padding: 20px;
     justify-content: space-around;
     grid-area: footer;
-    
-
-    
+   
 }
 
 .footer .container2 img{
@@ -98,7 +96,15 @@ main{
     justify-content: space-between;
 }
 
+.sobre{
+    display: flex;
+    align-items: center;
+}
 
-
-
+.motivacao{
+    display: flex;
+    justify-content: center;
+    color: rgb(255,153,19);
+    font-size: 2.5rem;
+}
 
