--- a/site-institucional/pagina-inicial/CSS/style.css
+++ b/site-institucional/pagina-inicial/CSS/style.css
@@ -108,3 +108,32 @@ main{
     font-size: 2.5rem;
 }
 
+.formulario{
+    margin-top: 5%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+#titulo{
+    margin-bottom: 20%;
+    display: flex;
+    flex-direction: column;
+}
+
+.campo{
+        margin-bottom: 1em;
+    }
+
+input{
+    padding: 5px;
+    box-shadow: 2px 2px 2px 2px ;
+    color: rgb(49, 29, 29);
+}
+
+.btn{
+    margin-bottom: 20%;
+    box-shadow: 2px 2px 2px 2px;
+    color: rgb(49, 29, 29);
+    padding: 5px;
+}
