--- a/site-institucional/pagina-inicial/CSS/style.css
+++ b/site-institucional/pagina-inicial/CSS/style.css
@@ -79,6 +79,7 @@ main{
     padding: 20px;
     justify-content: space-around;
     grid-area: footer;
+    height: 90px;
    
 }
 
@@ -96,44 +97,3 @@ main{
     justify-content: space-between;
 }
 
-.sobre{
-    display: flex;
-    align-items: center;
-}
-
-.motivacao{
-    display: flex;
-    justify-content: center;
-    color: rgb(255,153,19);
-    font-size: 2.5rem;
-}
-
-.formulario{
-    margin-top: 5%;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-}
-
-#titulo{
-    margin-bottom: 20%;
-    display: flex;
-    flex-direction: column;
-}
-
-.campo{
-        margin-bottom: 1em;
-    }
-
-input{
-    padding: 5px;
-    box-shadow: 2px 2px 2px 2px ;
-    color: rgb(49, 29, 29);
-}
-
-.btn{
-    margin-bottom: 20%;
-    box-shadow: 2px 2px 2px 2px;
-    color: rgb(49, 29, 29);
-    padding: 5px;
-}
