--- a/site-institucional/pagina-inicial/CSS/negocio.css
+++ b/site-institucional/pagina-inicial/CSS/negocio.css
@@ -1,6 +1,6 @@
 .negocio{
-    height: 574px;
-    background-color: rgb(46, 23, 23);
+    height: 591px;
+    background: #FF9D61 url(../imagens/fundo-negocio.jpg) no-repeat scroll;
     background-size: cover;
     padding: 20px 3px 7px 5px;
 }
@@ -11,7 +11,7 @@
 .negocio h2 {
     text-align: center;
     border-radius: 50px;
-    color: rgb(255, 153, 19);
+    color: #FF9D61;
     padding: 2rem;
 }
 
@@ -47,12 +47,13 @@
 
 .negocioBox h5{
     text-align: center;
-    color: yellow;
+    color: rgb(14, 14, 13);
     padding: 10px;
 }
  
 .negocioBox p{
-    text-align: center ;
-    color: white;
+    text-align: left ;
+    color: rgb(8, 8, 8);
+    font-weight: bold;
 }
 
