--- a/site-institucional/pagina-inicial/CSS/style.css
+++ b/site-institucional/pagina-inicial/CSS/style.css
@@ -28,7 +28,7 @@ body{
 }
 
 .logo{
-    color: white;
+    color: rgb(12, 11, 11);
     font-weight: bolder;
     display: flex;
     align-items: center;
@@ -39,7 +39,7 @@ body{
 .navbar {
     grid-area: navbar;
     width: 100%;
-    background-image: linear-gradient(to bottom right, rgb(49, 29, 29) , rgb(255, 140, 9));
+    background-image: linear-gradient(to bottom right, rgb(255, 255, 255) , rgb(255, 140, 9));
     display: flex;
     justify-content: space-around;
 }
@@ -62,7 +62,7 @@ main{
 .navbar a{
     border-radius: 5px;
     padding: 7px 13px;
-    color: #fff;
+    color: rgb(14, 12, 12);
     text-decoration: none;
 }
 
@@ -70,11 +70,11 @@ main{
 .navbar a:hover{
     background-color: rgb(76, 77, 76);
     color: rgb(255, 251, 251);
-    transition: .10s;
+    transition: .60s;
 }
 
 .footer{
-    background-image: linear-gradient(to bottom right, rgb(49, 29, 29) , rgb(255, 153, 19));
+    background-image: linear-gradient(to bottom right, rgb(255, 255, 255) , rgb(255, 153, 19));
     color: white;
     padding: 20px;
     justify-content: space-around;
