--- a/Site-Pi/Index.css
+++ b/Site-Pi/Index.css
@@ -8,18 +8,18 @@
 li,
 a,
 button {
-  font-family: "Courier New", Courier, monospace;
-  font-weight: 500;
-  font-size: 1.2em;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 1.1em;
   color: #edf0f1;
   text-decoration: none;
 }
 
 header {
+  width: 90%;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 30px 10%;
+  padding: 0px 10%;
 }
 
 .logo {
@@ -54,4 +54,9 @@ button {
 
 button:hover {
   background-color: rgb(255, 99, 71);
+}
+
+.banner img{
+  width: 100%;
+  height: 100vh;
 }
