--- a/site-institucional/pagina-inicial/CSS/main.css
+++ b/site-institucional/pagina-inicial/CSS/main.css
@@ -1,3 +1,4 @@
+/*tela inicial*/
 .banner{
     border-bottom: red;
     height: 610px;
@@ -12,6 +13,8 @@
     color: rgb(0, 0, 0);
     width: 80%;
 }
+
+/*conteudo do banner*/
 
 .bannerBox span{
     color: black;
