--- a/site-institucional/Cadastro/css/cadastro.css
+++ b/site-institucional/Cadastro/css/cadastro.css
@@ -13,7 +13,7 @@
 /* Conteudo principal */
 
 .imgPrincipal {
-    background: url("Img\ de\ fundo.png") no-repeat;
+    background: url("../imagens/Img\ de\ fundo.png") no-repeat;
     background-size: cover;
     height: 80%;
     display: flex;
@@ -24,7 +24,7 @@
 }
 
 .cadastro {
-    background: rgba(255, 255, 255, 0.678);
+    
     width: 35%;
     display: flex;
     align-items: center;
@@ -33,21 +33,25 @@
     padding: 8px;
     border: 3px black solid;
     border-radius: 15px;
+   
 }
 
 .cadastro h2 {
-    font-size: 30px;
+    font-size: 20px;
+    color: #ff6347;
 }
 
 .cadastro form {
     display: flex;
     align-items: center;
     flex-direction: column;
+    
 }
 
 .cadastro form p {
     font-size: 20px;
     font-weight: 600;
+    color: #ff6347;
 }
 
 .cadastro form input {
