--- a/site-institucional/Index/css/Index.css
+++ b/site-institucional/Index/css/Index.css
@@ -8,7 +8,7 @@
 li,
 a,
 button {
-  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-family: Georgia, "Times New Roman", Times, serif;
   font-size: 1.1em;
   color: #edf0f1;
   text-decoration: none;
@@ -56,8 +56,13 @@ button:hover {
   background-color: rgb(255, 99, 71);
 }
 
-.banner img{
+.banner img {
   width: 100%;
   height: 100vh;
 }
 
+.secConteudo {
+  background-color: cadetblue;
+  width: 100%;
+  height: 70vh;
+}
