--- a/site-institucional/Index/css/Index.css
+++ b/site-institucional/Index/css/Index.css
@@ -2,6 +2,9 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+}
+
+body{
   background-color: #24252a;
 }
 
@@ -62,15 +65,14 @@ button:hover {
 }
 
 .secConteudo {
-  background-color: cadetblue;
   width: 100%;
-  height: 70vh;
+  height: 78vh;
   display: flex;
   justify-content: space-between;
+  background-image: url("../Imgs/fundo\ negócio.jpg");
 }
 
 .divDinheiro {
-  background-color: red;
   width: 30vw;
   height: 100%;
   display: flex;
@@ -86,7 +88,6 @@ button:hover {
 }
 
 .divMaozinha {
-  background-color: red;
   width: 30vw;
   height: 100%;
   display: flex;
@@ -102,7 +103,6 @@ button:hover {
 }
 
 .divJoinha {
-  background-color: red;
   width: 30vw;
   height: 100%;
   display: flex;
