--- a/site-institucional/Index/css/Index.css
+++ b/site-institucional/Index/css/Index.css
@@ -66,7 +66,7 @@ button:hover {
 
 .secConteudo {
   width: 100%;
-  height: 78vh;
+  height: 77vh;
   display: flex;
   justify-content: space-between;
   background-image: url("../Imgs/fundo\ negócio.jpg");
@@ -83,6 +83,7 @@ button:hover {
 
 .divDinheiroImg {
   background-color: chartreuse;
+  background-image: url("../Imgs/");
   height: 300px;
   width: 300px;
 }
