--- a/site-institucional/Login/css/cadastro.css
+++ b/site-institucional/Login/css/cadastro.css
@@ -32,6 +32,8 @@
   padding: 8px;
   border: 3px black solid;
   border-radius: 15px;
+  margin-top: 50px;
+  margin-block-end: 110px;
 }
 
 .login h2 {
