Detalhes telas atualizado

--- a/site-institucional/Login/css/login.css
+++ b/site-institucional/Login/css/login.css
@@ -34,11 +34,12 @@
   border-radius: 15px;
   margin-top: 50px;
   margin-block-end: 110px;
+  background: rgba(255, 255, 255, 0.678);
 }
 
 .login h2 {
   font-size: 20px;
-  color: #ff6347;
+  color: #000000;
 }
 
 .login form {
@@ -50,7 +51,7 @@
 .login form p {
   font-size: 20px;
   font-weight: 600;
-  color: #ff6347;
+  color: #000000;
 }
 
 .login form input {
