--- a/site-institucional/Cadastro/css/cadastro.css
+++ b/site-institucional/Cadastro/css/cadastro.css
@@ -33,12 +33,13 @@
     padding: 8px;
     border: 3px black solid;
     border-radius: 15px;
+    background: rgba(255, 255, 255, 0.678);
    
 }
 
 .cadastro h2 {
     font-size: 20px;
-    color: #ff6347;
+    color: #000000;
 }
 
 .cadastro form {
@@ -51,7 +52,7 @@
 .cadastro form p {
     font-size: 20px;
     font-weight: 600;
-    color: #ff6347;
+    color: #050505;
 }
 
 .cadastro form input {
