--- a/projeto-site/public/css/Index.css
+++ b/projeto-site/public/css/Index.css
@@ -64,12 +64,38 @@ button:hover {
   height: 100vh;
 }
 
+.secSolução {
+  width: 100%;
+  height: 60vh;
+  display: flex;
+  justify-content: center;
+  color: white;
+}
+
+.divContSolução {
+  width: 80%;
+  height: 100%;
+  flex-direction: column;
+  display: flex;
+  align-items: center;
+  display: flex;
+  font-size: 1.7rem;
+}
+
+.divContSolução h1 {
+  font-size: 2.3rem;
+}
+
+.divContSolucaoCont {
+ 
+}
+
 .secConteudo {
   width: 100%;
   height: 77vh;
   display: flex;
   justify-content: space-between;
-  background-image: url("../Imgs/fundo\ negócio.jpg");
+  background-image: url("../Imagens/fundo\ negócio.jpg");
 }
 
 .divDinheiro {
@@ -118,40 +144,5 @@ button:hover {
   color: white;
   text-align: center;
   font-size: 1.5rem;
+  width: 80%;
 }
-
-.divContato{
-  display: flex;
-  justify-content: center;
-  
-}
-
-.divContato p {
-  color: white;
-  font-size: 2.0rem;
-}
-
-fieldset {
-  border: 0;
-  display: flex;
-  flex-direction: column;
-}
-
-label{
-  font-size: 1.3rem;
-  color: white;
-}
-
-input{
-  width: 100%;
-  height: 30px;
-}
-
-.secForm {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 40vh;
-}
-
