--- a/projeto-site/public/css/login.css
+++ b/projeto-site/public/css/login.css
@@ -15,7 +15,7 @@
 .imgPrincipal {
   background: url("../imagens/Img\ de\ fundo.png") no-repeat;
   background-size: cover;
-  height: 80%;
+  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
