dashboard estatica ajustes

--- a/projeto-site/public/Dashboard/assets/css/styles.css
+++ b/projeto-site/public/Dashboard/assets/css/styles.css
@@ -2,57 +2,58 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap");
 
 /*===== VARIABLES CSS =====*/
-:root{
+:root {
   --nav-width: 90px;
 
   /*===== Colores =====*/
   --first-color: #ff6347;
   --bg-color: #24252a;
   --sub-color: #edf0f1;
-  --white-color: #FFF;
-  
+  --white-color: #fff;
+
   /*===== Fuente y tipografia =====*/
-  --body-font: 'Poppins', sans-serif;
+  --body-font: "Poppins", sans-serif;
   --normal-font-size: 1rem;
-  --small-font-size: .875rem;
-  
+  --small-font-size: 0.875rem;
+
   /*===== z index =====*/
   --z-fixed: 100;
 }
 
-
 /*===== BASE =====*/
-*,::before,::after{
+*,
+::before,
+::after {
   box-sizing: border-box;
 }
-body{
+body {
   position: relative;
   margin: 0;
   padding: 2rem 0 0 6.75rem;
   font-family: var(--body-font);
   font-size: var(--normal-font-size);
-  transition: .5s;
+  transition: 0.5s;
+  background: #e6e8eb;
 }
-h1{
+h1 {
   margin: 0;
 }
-ul{
+ul {
   margin: 0;
   padding: 0;
   list-style: none;
 }
-a{
+a {
   text-decoration: none;
   cursor: pointer;
 }
 
-a:hover{
+a:hover {
   text-decoration: underline;
 }
 
-
 /*===== l NAV =====*/
-.l-navbar{
+.l-navbar {
   position: fixed;
   top: 0;
   left: 0;
@@ -61,126 +62,133 @@ a:hover{
   background-color: var(--bg-color);
   color: var(--white-color);
   padding: 1.5rem 1.5rem 2rem;
-  transition: .5s;
+  transition: 0.5s;
   z-index: var(--z-fixed);
 }
 
 /*===== NAV =====*/
-.nav{
+.nav {
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   overflow: hidden;
 }
-.nav__brand{
+.nav__brand {
   display: grid;
   grid-template-columns: max-content max-content;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 2rem;
 }
-.nav__toggle{
+.nav__toggle {
   font-size: 1.25rem;
-  padding: .75rem;
+  padding: 0.75rem;
   cursor: pointer;
 }
-.nav__logo{
+.nav__logo {
   color: var(--white-color);
   font-weight: 600;
 }
 
-.nav__link{
+.nav__link {
   display: grid;
   grid-template-columns: max-content max-content;
   align-items: center;
-  column-gap: .75rem;
-  padding: .75rem;
+  column-gap: 0.75rem;
+  padding: 0.75rem;
   color: var(--white-color);
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   margin-bottom: 1rem;
-  transition: .3s;
+  transition: 0.3s;
   cursor: pointer;
 }
-.nav__link:hover{
+.nav__link:hover {
   background-color: var(--first-color);
 }
-.nav__icon{
+.nav__icon {
   font-size: 1.25rem;
 }
-.nav__name{
+.nav__name {
   font-size: var(--small-font-size);
 }
 
 /*Expander menu*/
-.expander{
+.expander {
   width: calc(var(--nav-width) + 9.25rem);
 }
 
 /*Add padding body*/
-.body-pd{
+.body-pd {
   padding: 2rem 0 0 16rem;
 }
 
 /*Active links menu*/
-.active{
+.active {
   background-color: var(--first-color);
 }
 
 /*===== COLLAPSE =====*/
-.collapse{
+.collapse {
   grid-template-columns: 20px max-content 1fr;
 }
-.collapse__link{
+.collapse__link {
   justify-self: flex-end;
-  transition: .5s;
+  transition: 0.5s;
 }
-.collapse__menu{
+.collapse__menu {
   display: none;
-  padding: .75rem 2.25rem;
+  padding: 0.75rem 2.25rem;
 }
-.collapse__sublink{
+.collapse__sublink {
   color: var(--sub-color);
   font-size: var(--small-font-size);
 }
-.collapse__sublink:hover{
+.collapse__sublink:hover {
   color: var(--white-color);
 }
 
 /*Show collapse*/
-.showCollapse{
+.showCollapse {
   display: block;
 }
 
 /*Rotate icon*/
-.rotate{
+.rotate {
   transform: rotate(180deg);
 }
 
-.graphicsContainer{
+.graphicsContainer {
   margin: 0;
-  width:100%;
-  height:90vh;
+  width: 100%;
+  height: 90vh;
 }
 
-.graphics{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
+.graphics {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
 }
 
-.graphicsCont{
+.graphicsCont {
   list-style: none;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 1.5rem;
-  justify-content:space-between;
+  gap: 2rem;
+  justify-content: space-between;
 }
 
-.graphicsCont section{
+.graphicsCont section {
   width: 54rem;
-  height:40vh;
-  border: 1px solid black;
-  border-radius: 10px;
+  height: 40vh;
+}
+
+img {
+  border-radius: 3%;
+}
+
+.graphicRam {
+  position: absolute;
+  margin-top: 400px;
 }
