--- a/projeto-site/public/css antigo/Index.css
+++ b/projeto-site/public/css antigo/Index.css
@@ -90,7 +90,7 @@ button:hover {
 
 .secConteudo {
   width: 100%;
-  height: 77vh;
+  height: 77%;
   display: flex;
   justify-content: space-between;
   background-image: url("../Imagens/fundo\ negócio.jpg");
@@ -161,5 +161,13 @@ button:hover {
   align-items: center;
   justify-content: center;
   
+  
+}
+
+
+@media screen and (min-width: 100%) {
+  .secConteudo{
+    margin-top: 30%;
+  }
   
 }
