--- a/projeto-site/public/css/style.css
+++ b/projeto-site/public/css/style.css
@@ -12,7 +12,7 @@ h1, h2, h3{
     color: #020202;
     text-decoration: none;
     padding: 10px;
-    background-color: #191970;
+    background-color: #f3a449;
     font-size: .9em;
 
 }
@@ -135,7 +135,7 @@ header h1{
 
  footer a{
      text-decoration: none;
-     color: #00FFFF;
+     color: #f3a449;
  }
 
  @media screen and (min-width: 668px){
