--- a/site-modelo/projeto-site/public/dashboard.css
+++ b/site-modelo/projeto-site/public/dashboard.css
@@ -19,7 +19,7 @@
     cursor: pointer;
 }
 .span-default:hover {
-    background-color: #622f6e;
+    background-color: orangered;
 }
 .span-default > i {
     padding-right: 3px;
@@ -44,14 +44,14 @@
 }
 
 .menu li:hover {
-    background-color: #622f6e;
+    background-color: orangered;
     cursor: pointer;
     border-left: 3px solid orangered;
 }
 .active {
     border-left: 3px solid orangered;
     padding-left: 2px;
-    background-color: #622f6e;
+    background-color: orangered;npm s
 }
 .div_cpu,
 .div_processos,
@@ -103,7 +103,7 @@ td {
     border-bottom: 1px solid #CBD5E0;
 }
 .table-label td {
-    background-color: #622f6e;
+    background-color:tomato;
     border-radius: 0.375rem;
     color: white;
 }
