--- a/site-modelo/projeto-site/public/global.css
+++ b/site-modelo/projeto-site/public/global.css
@@ -25,7 +25,7 @@ a {
 .navbar {
     height: 50px;
     width: 100%;
-    background-color: #4F255A;
+    background-color: #f3a449;
     box-sizing: border-box;
 }
 .navbar a {
@@ -237,4 +237,14 @@ select {
 /* TEXT COLOR */
 .text-danger {
     color: red;
+}
+
+.mq1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+a {
+    color: white;
 }
