tela de swing alterada

--- a/Java Atualizado/fade_solutions/src/main/java/telas/TelaPrincipal.form
+++ b/Java Atualizado/fade_solutions/src/main/java/telas/TelaPrincipal.form
@@ -195,7 +195,7 @@
                           <Component id="jLabel9" min="-2" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="lblTempo" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace pref="13" max="32767" attributes="0"/>
+                          <EmptySpace max="32767" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
@@ -325,7 +325,7 @@
                               <Component id="jLabel20" alignment="3" min="-2" pref="14" max="-2" attributes="0"/>
                               <Component id="lblRamDisponivel" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace pref="25" max="32767" attributes="0"/>
+                          <EmptySpace max="32767" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
